<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <include layout="@layout/include_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llSelectDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSelectedDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                    tools:text="20" />

                <TextView
                    android:id="@+id/tvSelectedMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Abril" />

            </LinearLayout>

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_material_2x"
                android:text="@string/schedule_treatment_select_hour"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

            <include
                layout="@layout/empty_view"
                tools:visibility="gone" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cgHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_material_2x"
                android:layout_marginTop="@dimen/spacing_material_1x"
                android:layout_marginEnd="@dimen/spacing_material_2x"
                android:isScrollContainer="true"
                app:chipSpacing="@dimen/spacing_material_1x"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_material_2x"
                android:text="@string/schedule_treatment_select_pet"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cgPets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_material_2x"
                android:layout_marginTop="@dimen/spacing_material_1x"
                android:layout_marginEnd="@dimen/spacing_material_2x"
                android:isScrollContainer="true"
                app:chipSpacing="@dimen/spacing_material_1x"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btSelectHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_material_2x"
                android:layout_marginTop="@dimen/spacing_material_2x"
                android:layout_marginEnd="@dimen/spacing_material_2x"
                android:layout_marginBottom="@dimen/spacing_material_2x"
                android:text="@string/button_request_scheduling"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/loading_ui" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>